--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -10,6 +10,6 @@
 }
 
 .terminal {
-    overflow: hidden;
+    overflow-y: auto;
     height: 100%;
 }
