--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,7 +13,6 @@
 }
 
 @media (max-width: 1000px) {
-  .container > .termainal,
   .container > .personal {
     flex: none;
     width: 100%;
